--- a/index.html
+++ b/index.html
@@ -100,6 +100,12 @@
             <i class="fa-solid fa-envelope"></i>
             <p>Email <a href="mailto:miguelangelbanegas@gmail.com">miguelangelbanegas@gmail.com</a></p>
           </div>
+          <div class="col-sm-4 text-center border border-red border-2 rounded">
+            <div class="contact-info">
+              <i class="fa-solid fa-envelope"></i>
+              <p>Email <a href="mailto:miguelangelbanegas@gmail.com">miguelangelbanegas@gmail.com</a></p>
+            </div>
+          </div> 
           <div class="col-sm-4 text-center border border-red border-2 rounded" id="Contacto">
             <i class="fa-solid fa-phone"></i>        
                     <p>(+54) 11 2233-4455 <br>
